--- a/TaskTrackerAssignment/source-code/tasktracker-ui/src/app/components/view-task/view-task.component.html
+++ b/TaskTrackerAssignment/source-code/tasktracker-ui/src/app/components/view-task/view-task.component.html
@@ -1,4 +1,37 @@
-<div *ngFor="let task of (tasks$ | async)">
+
+<div> 
+  <div class="row search-row-one">
+    <span class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+      <label class="search-row-one-elem r1col-one">Task:</label>
+      <input class="search-row-one-elem r1col-two" type="text" (input)="searchTask($event)" [value]="taskName" placeholder="Search By Task" >
+    </span>
+    <span class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+      <label class="search-row-one-elem r1col-one">Parent Task:</label>
+      <input class="search-row-one-elem r1col-two" type="text" (input)="searchTask($event)" [value]="parentTaskName" placeholder="Search By Parent Task" >
+    </span>
+  </div>
+
+  <div class="row search-row-two">
+    <span class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+      <label class="search-row-two-elem r2col-one">Priority From:</label>
+      <input class="search-row-two-elem r2col-two" type="number" min="0" max="30" >
+    </span>
+    <span class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+      <label class="search-row-two-elem r2col-one">Priority To:</label>
+      <input class="search-row-two-elem r2col-two" type="number" min="0" max="30" >  
+    </span>
+    <span class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+      <label class="search-row-two-elem r2col-one">Start Date:</label>
+      <input class="search-row-two-elem r2col-two" type="date" >
+    </span>
+    <span class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+      <label class="search-row-two-elem r2col-one">End Date:</label>
+      <input class="search-row-two-elem r2col-two" type="date" >
+    </span>
+  </div>
+</div>
+<hr>
+<div *ngFor="let task of (tasks$ | async) | searchContent : [searchText , 'task']">
   <div class="row heading">
     <span class="col-lg-2 col-md-2 col-sm-2 col-xs-2">Task</span>
     <span class="col-lg-2 col-md-2 col-sm-2 col-xs-2">Parent</span>
@@ -15,7 +48,7 @@
     <span class="col-lg-2 col-md-2 col-sm-2 col-xs-2">{{ getDate(task.endDate) }}</span>
     <span class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
       <span> <a [routerLink]="['/edit', task.taskId]">Edit</a></span>
-      <span><input type="button" value="End Task" (click)="endTask(task.taskId)"/></span>
+      <span><button type="button" class="btn btn-link" (click)="endTask(task.taskId)" >End Task</button></span>
     </span>
   </div>
 </div>
